# math

./: .gitmodules  CMakeLists.txt  COMPLETION_SUMMARY.md  DEV.md  DEVELOPMENT_PLAN.md  README.md  ROADMAP.md
benchmark/: CMakeLists.txt  benchmark_matrix_market.cpp
docs/: phase1_tasks.md
examples/: bcsstk13_solve.cpp  bcsstk_amgcl_all.cpp  lns_reorder_solve.cpp  solve_example.cpp
scripts/: download_from_ssget.py  download_matrix_market.py
src/: preconditioner.h  reorder.cpp  reorder.h  solver.h  sparse_matrix.cpp  sparse_matrix.h  vector.cpp  vector.h
src/io/: matrix_market.cpp  matrix_market.h
src/preconditioners/: amg.cpp  amg.h  amgcl_wrapper.cpp  amgcl_wrapper.h  ilu0.cpp  ilu0.h  jacobi_precond.cpp  jacobi_precond.h
src/solvers/: bicgstab.cpp  bicgstab.h  cg.cpp  cg.h  gmres.cpp  gmres.h  solver_base.cpp
tests/: CMakeLists.txt  gtest_all_matrices.cpp  gtest_amg.cpp  gtest_amgcl.cpp  gtest_bicgstab.cpp  gtest_cg.cpp  gtest_csc.cpp  gtest_gmres.cpp  gtest_ilu0.cpp  gtest_io.cpp  gtest_matrix.cpp  gtest_openmp.cpp  gtest_precond.cpp  gtest_vector.cpp
